# build-config

./: BUILDCONFIG.gn  LICENSE  README.md
win/: BUILD.gn  midl.gni  setup_toolchain.py  toolchain.gni  visual_studio_version.gni  vs_toolchain.py
